--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -43,10 +43,8 @@ body {
 
 p {
     display: block;
-    margin-block-start: 1__qem;
-    margin-block-end: 1__qem;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 1__qem;
+    margin-inline: 0;
 }
 
 address, article, aside, div, footer, header, hgroup, main, nav, search, section {
@@ -60,10 +58,8 @@ marquee {
 
 blockquote {
     display: block;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
+    margin-block: 1__qem 1em;
+    margin-inline: 40px;
 }
 
 figcaption {
@@ -72,10 +68,8 @@ figcaption {
 
 figure {
     display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
+    margin-block: 1em;
+    margin-inline: 40px;
 }
 
 q {
@@ -100,10 +94,8 @@ hr {
     display: block;
     overflow: hidden;
     color: gray;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
+    margin-block: 0.5em;
+    margin-inline: auto;
     border-style: inset;
     border-width: 1px;
 }
@@ -125,8 +117,7 @@ abbr[title], acronym[title] {
 
 dialog {
     position: absolute;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
+    inset-inline: 0;
     width: fit-content;
     height: fit-content;
     margin: auto;
@@ -144,8 +135,7 @@ dialog[open] {
 dialog:modal {
     position: fixed;
     overflow: auto;
-    inset-block-start: 0;
-    inset-block-end: 0;
+    inset-block: 0;
     max-width: calc(100% - 6px - 2em);
     max-height: calc(100% - 6px - 2em);
     visibility: visible;
@@ -184,89 +174,72 @@ audio:not([controls]) {
 h1 {
     display: block;
     font-size: 2em;
-    margin-block-start: 0.67__qem;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 0.67__qem 0.67em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
 :is(article, aside, nav, section) h1 {
     font-size: 1.5em;
-    margin-block-start: 0.83__qem;
-    margin-block-end: 0.83em;
+    margin-block: 0.83__qem 0.83em;
 }
 
 :is(article, aside, nav, section) :is(article, aside, nav, section) h1 {
     font-size: 1.17em;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
+    margin-block: 1__qem 1em;
 }
 
 :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) h1 {
     font-size: 1.00em;
-    margin-block-start: 1.33__qem;
-    margin-block-end: 1.33em;
+    margin-block: 1.33__qem 1.33em;
 }
 
 :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) h1 {
     font-size: .83em;
-    margin-block-start: 1.67__qem;
-    margin-block-end: 1.67em;
+    margin-block: 1.67__qem 1.67em;
 }
 
 :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) :is(article, aside, nav, section) h1 {
     font-size: .67em;
-    margin-block-start: 2.33__qem;
-    margin-block-end: 2.33em;
+    margin-block: 2.33__qem 2.33em;
 }
 
 h2 {
     display: block;
     font-size: 1.5em;
-    margin-block-start: 0.83__qem;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 0.83__qem 0.83em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
 h3 {
     display: block;
     font-size: 1.17em;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 1__qem 1em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
 h4 {
     display: block;
-    margin-block-start: 1.33__qem;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 1.33__qem 1.33em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
 h5 {
     display: block;
     font-size: .83em;
-    margin-block-start: 1.67__qem;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 1.67__qem 1.67em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
 h6 {
     display: block;
     font-size: .67em;
-    margin-block-start: 2.33__qem;
-    margin-block-end: 2.33em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-block: 2.33__qem 2.33em;
+    margin-inline: 0;
     font-weight: bold;
 }
 
@@ -342,16 +315,14 @@ caption {
 ul, menu, dir {
     display: block;
     list-style-type: disc;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
+    margin-block: 1__qem 1em;
     padding-inline-start: 40px;
 }
 
 ol {
     display: block;
     list-style-type: decimal;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
+    margin-block: 1__qem 1em;
     padding-inline-start: 40px;
 }
 
@@ -361,8 +332,7 @@ li {
 }
 
 :is(dir, dl, menu, ol, ul) :is(dir, dl, menu, ol, ul) {
-    margin-block-start: 0;
-    margin-block-end: 0;
+    margin-block: 0;
 }
 
 :is(dir, menu, ol, ul) :is(dir, menu, ul) {
@@ -380,8 +350,7 @@ dd {
 
 dl {
     display: block;
-    margin-block-start: 1__qem;
-    margin-block-end: 1em;
+    margin-block: 1__qem 1em;
 }
 
 dt {
@@ -410,19 +379,15 @@ label {
 }
 
 legend {
-    padding-inline-start: 2px;
-    padding-inline-end: 2px;
+    padding-inline: 2px;
     border: none;
 }
 
 fieldset {
     display: block;
-    margin-inline-start: 2px;
-    margin-inline-end: 2px;
-    padding-block-start: 0.35em;
-    padding-inline-start: 0.75em;
-    padding-inline-end: 0.75em;
-    padding-block-end: 0.625em;
+    margin-inline: 2px;
+    padding-block: 0.35em 0.625em;
+    padding-inline: 0.75em;
     border: 2px groove ThreeDFace;
     min-inline-size: min-content;
 }
@@ -662,16 +627,14 @@ input::-webkit-credentials-auto-fill-button {
     background-image: url('data:image/svg+xml,%3Csvg xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg" viewBox%3D"0 0 26 26"%3E%3Cpath d%3D"m8.692 1h8.617c2.675 0 3.644.278 4.622.801s1.745 1.29 2.268 2.268.801 1.948.801 4.622v8.617c0 2.675-.278 3.644-.801 4.622s-1.29 1.745-2.268 2.268-1.948.801-4.622.801h-8.617c-2.675 0-3.644-.278-4.622-.801s-1.745-1.29-2.268-2.268-.801-1.948-.801-4.622v-8.616c0-2.675.278-3.644.801-4.622s1.29-1.745 2.268-2.268 1.948-.801 4.622-.801z" fill%3D"%23e5e5e5" opacity%3D".64"%2F%3E%3Cpath d%3D"m9.838 8.318c-.308 0-.57-.108-.787-.325s-.325-.478-.325-.785.108-.57.323-.787.478-.325.789-.325c.303 0 .564.109.782.327s.327.48.327.785c0 .306-.109.568-.327.785s-.479.325-.782.325zm0-3.84c-.59 0-1.139.108-1.648.324s-.956.517-1.341.903-.686.833-.904 1.341-.326 1.055-.326 1.641c0 .571.106 1.112.317 1.622s.51.961.896 1.352.841.698 1.366.918v6.082c0 .101.018.196.054.287s.092.173.167.247l1.122 1.077c.083.078.19.12.32.126s.244-.039.343-.136l1.998-1.998c.104-.105.155-.227.153-.365s-.054-.26-.157-.365l-1.094-1.083 1.555-1.553c.101-.102.151-.223.149-.361-.001-.138-.054-.26-.158-.365l-1.488-1.496c.929-.411 1.644-.964 2.142-1.66.499-.696.748-1.472.748-2.329 0-.581-.109-1.126-.327-1.635s-.52-.956-.905-1.341-.833-.687-1.343-.905-1.057-.327-1.639-.327z" opacity%3D".78"%2F%3E%3Cpath d%3D"m19.091 15.574c.108-.002.207-.023.296-.064.09-.041.179-.105.268-.193l2.462-2.522c.126-.124.189-.278.189-.46 0-.124-.03-.237-.091-.34s-.141-.185-.242-.245c-.101-.061-.212-.091-.334-.091-.187 0-.352.073-.495.22l-2.165 2.249h.232l-2.175-2.249c-.145-.147-.311-.22-.497-.22-.122 0-.234.03-.334.091-.101.061-.182.142-.242.245-.061.103-.091.216-.091.34 0 .09.015.173.046.248s.078.146.14.212l2.467 2.521c.171.171.36.256.565.256z" opacity%3D".75"%2F%3E%3C%2Fsvg%3E');
     width: 24px;
     height: 24px;
-    margin-inline-start: 2px;
-    margin-inline-end: 1px;
+    margin-inline: 2px 1px;
     mix-blend-mode: luminosity;
 #else
     mask-image: url('data:image/svg+xml,<svg viewBox="0 0 44 24" xmlns="http://www.w3.org/2000/svg"><path d="M 30.25 9.25 L 36.5 15.75 L 42.75 9.25" fill="none" stroke="black" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M 16 3.5 C 16 2.672 16.672 2 17.5 2 C 18.3 2 19 2.7 19 3.5 C 19 4.3 18.3 5 17.5 5 C 16.7 5 16 4.3 16 3.5 Z M 11 6.5 C 11 10.1 13.9 13 17.5 13 C 21.1 13 24 10.1 24 6.5 C 24 2.9 21.1 0 17.5 0 C 13.9 0 11 2.9 11 6.5 Z"/><path d="M 20 17.3 L 20 18.6 L 20.9 19.9 C 21 20 21 20 21 20 L 17.7 23.8 C 17.7 23.8 17.7 23.8 17.7 23.8 C 17.5 23.9 17.4 23.9 17.3 23.8 L 15 21 L 15 11 L 20 11 L 20 14.8 L 21 15.9 C 21 16 21 16 20.9 16.1 L 20 17.3 Z M 17 13 L 17 21.3 L 17.5 21.8 L 18 21.3 L 18 13 L 17 13 Z"/></svg>');
     mask-size: 22px 12px;
     width: 22px;
     height: 12px;
-    margin-inline-start: 3px;
-    margin-inline-end: 2px;
+    margin-inline: 3px 2px;
     background-color: black;
 #endif
     flex: none;
@@ -703,8 +666,7 @@ input::-webkit-contacts-auto-fill-button {
     mask-size: 22px 12px;
     width: 22px;
     height: 12px;
-    margin-inline-start: 3px;
-    margin-inline-end: 2px;
+    margin-inline: 3px 2px;
     background-color: black;
     flex: none;
     -webkit-user-select: none;
@@ -723,8 +685,7 @@ input::-webkit-credit-card-auto-fill-button {
     mask-size: 22px 12px;
     width: 22px;
     height: 12px;
-    margin-inline-start: 3px;
-    margin-inline-end: 2px;
+    margin-inline: 3px 2px;
     background-color: black;
     flex: none;
     -webkit-user-select: none;
@@ -742,8 +703,7 @@ input::-internal-loading-auto-fill-button {
     background-image: url('data:image/svg+xml,<svg width="22" height="12" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" xml:space="preserve"><path fill="rgb(55,55,55)" d="M19.36,12.64L19.36,12.64c-0.88-0.88-0.88-2.3,0-3.18l4.6-4.6c0.88-0.88,2.3-0.88,3.18,0l0,0c0.88,0.88,0.88,2.3,0,3.18l-4.6,4.6C21.66,13.52,20.24,13.52,19.36,12.64z"><animate attributeName="fill" begin="0s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(76,76,76)" d="M20.75,16L20.75,16c0-1.24,1.01-2.25,2.25-2.25l6.5,0c1.24,0,2.25,1.01,2.25,2.25v0c0,1.24-1.01,2.25-2.25,2.25l-6.5,0C21.76,18.25,20.75,17.24,20.75,16z"><animate attributeName="fill" begin="0.125s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(97,97,97)" d="M27.14,27.14L27.14,27.14c-0.88,0.88-2.3,0.88-3.18,0l-4.6-4.6c-0.88-0.88-0.88-2.3,0-3.18l0,0c0.88-0.88,2.3-0.88,3.18,0l4.6,4.6C28.02,24.83,28.02,26.26,27.14,27.14z"><animate attributeName="fill" begin="0.25s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(118,118,118)" d="M16,31.75L16,31.75c-1.24,0-2.25-1.01-2.25-2.25l0-6.5c0-1.24,1.01-2.25,2.25-2.25h0c1.24,0,2.25,1.01,2.25,2.25l0,6.5C18.25,30.74,17.24,31.75,16,31.75z"><animate attributeName="fill" begin="0.375s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(138,138,138)" d="M4.86,27.14L4.86,27.14c-0.88-0.88-0.88-2.3,0-3.18l4.6-4.6c0.88-0.88,2.3-0.88,3.18,0l0,0c0.88,0.88,0.88,2.3,0,3.18l-4.6,4.6C7.17,28.02,5.74,28.02,4.86,27.14z"><animate attributeName="fill" begin="0.5s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(159,159,159)" d="M0.25,16L0.25,16c0-1.24,1.01-2.25,2.25-2.25l6.5,0c1.24,0,2.25,1.01,2.25,2.25v0c0,1.24-1.01,2.25-2.25,2.25l-6.5,0C1.26,18.25,0.25,17.24,0.25,16z"><animate attributeName="fill" begin="0.625s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(180,180,180)" d="M12.64,12.64L12.64,12.64c-0.88,0.88-2.3,0.88-3.18,0l-4.6-4.6c-0.88-0.88-0.88-2.3,0-3.18l0,0c0.88-0.88,2.3-0.88,3.18,0l4.6,4.6C13.52,10.34,13.52,11.76,12.64,12.64z"><animate attributeName="fill" begin="0.75s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path><path fill="rgb(201,201,201)" d="M16,11.25L16,11.25c-1.24,0-2.25-1.01-2.25-2.25l0-6.5c0-1.24,1.01-2.25,2.25-2.25h0c1.24,0,2.25,1.01,2.25,2.25l0,6.5C18.25,10.24,17.24,11.25,16,11.25z"><animate attributeName="fill" begin="0.875s" dur="1s" values="rgb(86,86,86);rgb(207,207,207)" calcMode="linear" repeatCount="indefinite" /></path></svg>');
     width: 22px;
     height: 12px;
-    margin-inline-start: 3px;
-    margin-inline-end: 2px;
+    margin-inline: 3px 2px;
     flex: none;
     -webkit-user-select: none;
 }
